# chat_realtime_api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
chat_realtime_api/: app.py
chat_realtime_api/api/v1/errors/: error_handlers.py
chat_realtime_api/api/v1/routers/: rooms.py  token.py  users.py
chat_realtime_api/api/v1/routers/ws/: chat.py
chat_realtime_api/api/v1/schemas/: history.py  rooms.py  token.py  users.py
chat_realtime_api/infra/config/: security.py  settings.py
chat_realtime_api/infra/db/: session.py
chat_realtime_api/infra/models/: messages.py  rooms.py  users.py
chat_realtime_api/infra/sqlalchemy_repositories/: messages.py  rooms.py  users.py
chat_realtime_api/repositories/: messages.py  rooms.py  users.py
chat_realtime_api/services/: token.py  users.py
chat_realtime_api/services/auth/: token.py
chat_realtime_api/services/errors/: exceptions.py
chat_realtime_api/services/messages/: create.py  get.py
chat_realtime_api/services/rooms/: create.py  get.py  get_history.py
chat_realtime_api/services/users/: create.py
migrations/: env.py
migrations/versions/: 24d95f1c2847_add_creator_id_in_rooms_table.py  720a68f75e45_create_users_table.py  b4652890743b_create_messages_table.py  b71ab88295b1_add_field_name_in_users_table.py  c7f422e42628_create_users_table.py  fcdf2c2ab5fc_create_rooms_table.py
tests/: conftest.py  test_app.py  test_rooms.py  test_token.py  test_users.py  test_ws.py
